# pykg-config

./: .gitignore  LICENSE.txt  MANIFEST.in  README.txt  index.html  make_dists  pykg-config.py  setup.cfg  setup.py
pykg_config/: __init__.py  __main__.py  dependency.py  envVars2VarsRemap.py  errorprinter.py  exceptions.py  operators.py  options.py  package.py  packagespeclist.py  pcfile.py  pkgconfig.py  pkgsearcher.py  props.py  result.py  substitute.py  version.py
test/: global_var.pc  test_compatibility.py  test_unittests.py  unittests1.pc
