[metadata]
name = pykg-config
author = Geoffrey Biggs
author_email = git@killbots.net
license = BSD
description = pkg-config replacement.
url = http://github.com/gbiggs/pykg-config
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Utilities

[options]
setup_requires = setuptools>=30.3.0; wheel; setuptools_scm
packages = pykg_config

[options.entry_points]
console_scripts = pykg-config=pykg_config.__main__:main
